<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Device Info</string>
    <string name="nav_app_bar_navigate_up_description">Navigate up</string>
    <string name="search_hint_items">Search all</string>
    <string name="search_clear">Clear search</string>
    <string name="not_found">Unable to determine</string>
    <string name="no_longer_possible">Not possible since Android %s</string>
    <string name="not_possible_yet">Available starting on Android %s</string>
    <string name="copy_to_clipboard">Copied %s to clipboard!</string>
    <string name="send_to">Share text to…</string>
    <string name="send_to_no_apps">No app available</string>
    <string name="menu_back">Navigate back</string>
    <string name="menu_overflow">More options</string>
    <string name="menu_search">@android:string/search_go</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_copy_to_clipboard">@android:string/copy</string>
    <string name="menu_share">Share</string>
    <string name="permission_item_subtitle">Please enable the %s permission</string>
    <string name="permission_snackbar_retry">The %1$s permission is required to display
        %2$s</string>
    <string name="snackbar_not_found_adapter">Unable to retrieve %s from this device</string>
    <string name="permission_snackbar_button">Retry</string>
    <string name="textview_recyclerview_no_items">No items</string>
    <string name="textview_recyclerview_no_search_items">No results</string>
    <string name="textview_recyclerview_title">Results</string>
    <string name="bottom_nav_title_device">Device</string>
    <string name="bottom_nav_title_network">Network</string>
    <string name="bottom_nav_title_software">Software</string>
    <string name="bottom_nav_title_hardware">Hardware</string>
    <string name="hardware_storage_output_format">%1$s of %2$s free</string>
    <string name="search_shortcut_short_label">@string/menu_search</string>
    <string name="search_shortcut_long_label">@string/menu_search</string>
    <string name="search_disabled_message">Search (disabled)</string>
    <string name="search_loading">Searching…</string>
    <string name="general_loading">Loading…</string>
    <string name="general_error">Something went wrong</string>
    <string name="battery_health_good">good</string>
    <string name="battery_health_cold">cold</string>
    <string name="battery_health_dead">dead</string>
    <string name="battery_health_overheat">overheat</string>
    <string name="battery_health_over_voltage">over voltage</string>
    <string name="battery_health_unspecified_failure">unspecified failure</string>
    <string name="battery_health_unknown">unknown</string>
    <string name="battery_status_charging">Charging</string>
    <string name="battery_status_full">Full</string>
    <string name="battery_status_discharging">Discharging</string>
    <string name="battery_status_not_charging">Not Charging</string>
    <string name="battery_status_unknown">@string/not_found</string>
    <string name="battery_plugged_usb">over USB</string>
    <string name="battery_plugged_ac">on AC</string>
    <string name="battery_plugged_wireless">wirelessly</string>
    <string name="display_rotation_0">0\u00B0</string>
    <string name="display_rotation_90">90\u00B0</string>
    <string name="display_rotation_180">180\u00B0</string>
    <string name="display_rotation_270">270\u00B0</string>
    <string name="display_state_on">On</string>
    <string name="display_state_off">Off</string>
    <string name="display_state_doze">Doze</string>
    <string name="display_state_doze_suspend">Doze suspend</string>
    <string name="display_state_on_suspend">On suspend</string>
    <string name="display_state_vr">VR</string>
    <string name="display_state_unknown">Unknown</string>
    <string name="display_cutout_top">Top</string>
    <string name="display_cutout_bottom">Bottom</string>
    <string name="display_cutout_left">Left</string>
    <string name="display_cutout_right">Right</string>
    <string name="display_refresh_rate">%1$dHz</string>
    <string name="display_density_ldpi">LDPI</string>
    <string name="display_density_mdpi">MDPI</string>
    <string name="display_density_hdpi">HDPI</string>
    <string name="display_density_xhdpi">XHDPI</string>
    <string name="display_density_xxhdpi">XXHDPI</string>
    <string name="display_density_xxxhdpi">XXXHDPI</string>
    <string name="display_density_tvdpi">TVDPI</string>
    <string name="display_density_140">140 DPI</string>
    <string name="display_density_180">180 DPI</string>
    <string name="display_density_200">200 DPI</string>
    <string name="display_density_220">220 DPI</string>
    <string name="display_density_260">260 DPI</string>
    <string name="display_density_280">280 DPI</string>
    <string name="display_density_300">300 DPI</string>
    <string name="display_density_340">340 DPI</string>
    <string name="display_density_360">360 DPI</string>
    <string name="display_density_400">400 DPI</string>
    <string name="display_density_420">420 DPI</string>
    <string name="display_density_440">440 DPI</string>
    <string name="display_density_450">450 DPI</string>
    <string name="display_density_560">560 DPI</string>
    <string name="display_density_600">600 DPI</string>
    <string name="display_density_other">%d DPI</string>
    <string name="display_density_format_with_name" tools:ignore="PluralsCandidate">%1$s (%2$dx%3$d pixels)</string>
    <string name="pref_title_app_settings">App Settings</string>
    <string name="pref_hide_unavailable_title">Hide not applicable</string>
    <string name="pref_hide_unavailable_summary_on">Hiding items not applicable to this
        device</string>
    <string name="pref_hide_unavailable_summary_off">Showing items not applicable to this
        device</string>
    <string name="pref_daynight_mode_title">Choose theme</string>
    <string name="pref_night_mode_system" translatable="false">mode_system</string>
    <string name="pref_night_mode_off" translatable="false">mode_off</string>
    <string name="pref_night_mode_on" translatable="false">mode_on</string>
    <string name="pref_auto_refresh_rate_title">Auto refresh rate</string>
    <string name="pref_auto_refresh_rate_summary">In seconds, how often to auto refresh
        items</string>
    <string name="pref_search_history_title">Search history</string>
    <string name="pref_search_history_summary_on">Saving history (turning off clears
        history)</string>
    <string name="pref_search_history_summary_off">Not saving history</string>
    <string name="pref_check_for_update_title_yes">App update available</string>
    <string name="pref_check_for_update_title_no">App update not available</string>
    <string name="pref_check_for_update_summary">Check for app update</string>
    <string name="pref_check_for_update_summary_canceled">Canceled</string>
    <string name="pref_check_for_update_summary_downloading">Downloading…</string>
    <string name="pref_check_for_update_summary_installed">Installed!</string>
    <string name="pref_check_for_update_summary_installing">Installing…</string>
    <string name="pref_check_for_update_summary_pending">Pending…</string>
    <string name="pref_check_for_update_summary_unknown">Unknown</string>
    <string name="pref_check_for_update_summary_downloaded">Downloaded - pending restart of
    app</string>
    <string name="pref_check_for_update_summary_failed">Check for app update failed!</string>
    <string name="update_notavailable_title">Latest version installed</string>
    <string name="update_notavailable_message">It seems that you&#8217;re already running the
        latest available version of this app.
    </string>
    <string name="update_notavailable_ok">@android:string/ok</string>
    <string name="update_unknown_title">Failed to check for updates</string>
    <string name="update_unknown_message">An unknown response has been received. Please check
        your internet connection or try again later.
    </string>
    <string name="update_unknown_ok">Got it</string>
    <string name="update_download_finished">An update has just been downloaded.</string>
    <string name="update_restart">Restart</string>
    <string name="update_download_failed">Failed to download an update.</string>
    <string name="update_retry">Retry</string>
    <string name="device_title_imei">IMEI / MEID</string>
    <string name="device_title_model">Model Number</string>
    <string name="device_title_serial">Serial</string>
    <string name="device_title_android_id">Android/Hardware ID</string>
    <string name="device_title_gsfid">Google Service Framework (GSF) ID</string>
    <string name="network_title_wifi_mac">Wi-Fi MAC Address</string>
    <string name="network_title_wifi_bssid">Wi-Fi BSSID</string>
    <string name="network_title_wifi_ssid">Wi-Fi SSID</string>
    <string name="network_title_wifi_frequency">Wi-Fi Frequency</string>
    <string name="network_title_wifi_hidden_ssid">Wi-Fi Hidden SSID</string>
    <string name="network_title_wifi_ip_address">Wi-Fi IP Address</string>
    <string name="network_title_wifi_link_speed">Wi-Fi Link Speed</string>
    <string name="network_title_wifi_tx_link_speed">Wi-Fi Transmit Link Speed</string>
    <string name="network_title_wifi_network_id">Wi-Fi Network ID</string>
    <string name="network_title_wifi_passpoint_fqdn">Wi-Fi Passpoint Fully Qualified Domain Name</string>
    <string name="network_title_wifi_passpoint_friendly_name">Wi-Fi Passpoint Provider Friendly Name</string>
    <string name="network_title_wifi_rssid">Wi-Fi RSSI</string>
    <string name="network_title_wifi_signal_level">Wi-Fi Signal Level</string>
    <string name="network_title_wifi_hostname">Wi-Fi Hostname</string>
    <string name="network_title_wifi_canonical_hostname">Wi-Fi Canonical Hostname</string>
    <string name="network_title_bluetooth_mac">Bluetooth MAC Address</string>
    <string name="network_title_bluetooth_hostname">Bluetooth Hostname</string>
    <string name="network_title_phone_count">Phone Count</string>
    <string name="network_title_sim_serial">Sim Serial</string>
    <string name="network_title_sim_operator">Sim Operator Name</string>
    <string name="network_title_sim_country">Sim Country</string>
    <string name="network_title_sim_state">Sim State</string>
    <string name="network_title_phone_number">Phone Number</string>
    <string name="network_title_voicemail_number">Voicemail Number</string>
    <string name="network_title_cell_network_name">Cell Network Name</string>
    <string name="network_title_cell_network_type">Cell Network Type</string>
    <string name="network_title_cell_network_class">Cell Network Class</string>
    <string name="network_title_esim_id">eSIM ID</string>
    <string name="network_title_esim_enabled">eSim Enabled</string>
    <string name="network_title_esim_os_version">eSIM OS Version</string>
    <string name="network_title_concurrent_voice_data_supported">Concurrent Voice and Data Supported</string>
    <string name="network_title_data_roaming_enabled">Data Roaming Enabled</string>
    <string name="network_title_hearing_aid_supported">Hearing Aid Compatibility Supported</string>
    <string name="network_title_multi_sim_supported">Multi Sim Supported</string>
    <string name="network_title_rtt_supported">RTT Supported</string>
    <string name="network_title_sms_capable">SMS Capable</string>
    <string name="network_title_voice_capable">Voice Capable</string>
    <string name="network_title_device_software_version">Device Software Version</string>
    <string name="network_title_manufacturer_code">Manufacturer Code</string>
    <string name="network_title_nai">Network Access Identifier (NAI)</string>
    <string name="software_title_android_version">Android Version</string>
    <string name="software_title_patch_level">Security Patch Level</string>
</resources>