<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory android:title="@string/pref_title_app_settings">
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_hide_unable"
            android:key="@string/pref_hide_unavailable_key"
            android:summaryOff="@string/pref_hide_unavailable_summary_off"
            android:summaryOn="@string/pref_hide_unavailable_summary_on"
            android:title="@string/pref_hide_unavailable_title" />
        <androidx.preference.SeekBarPreference
            android:defaultValue="0"
            android:icon="@drawable/ic_autorenew"
            android:key="@string/pref_auto_refresh_rate_key"
            android:max="10"
            android:summary="@string/pref_auto_refresh_rate_summary"
            android:title="@string/pref_auto_refresh_rate_title"
            app:min="0"
            app:showSeekBarValue="true" />
        <androidx.preference.ListPreference
            android:defaultValue="@string/pref_night_mode_system"
            android:entries="@array/pref_daynight_mode_entries"
            android:entryValues="@array/pref_daynight_mode_values"
            android:icon="@drawable/ic_dark_mode"
            android:key="@string/pref_daynight_mode_key"
            android:title="@string/pref_daynight_mode_title"
            app:useSimpleSummaryProvider="true" />
        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_history_search"
            android:key="@string/pref_search_history_key"
            android:summaryOff="@string/pref_search_history_summary_off"
            android:summaryOn="@string/pref_search_history_summary_on"
            android:title="@string/pref_search_history_title" />
        <androidx.preference.Preference
            android:icon="@drawable/ic_app_update"
            android:key="@string/pref_check_for_update_key"
            android:summary="@string/pref_check_for_update_summary" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>