<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/tab_device_dest"
            android:title="@string/bottom_nav_title_device"
            android:icon="@drawable/ic_bottom_device"/>
        <item
            android:id="@+id/tab_network_dest"
            android:title="@string/bottom_nav_title_network"
            android:icon="@drawable/ic_bottom_network"/>
        <item
            android:id="@+id/tab_software_dest"
            android:title="@string/bottom_nav_title_software"
            android:icon="@drawable/ic_bottom_software"/>
        <item
            android:id="@+id/tab_hardware_dest"
            android:title="@string/bottom_nav_title_hardware"
            android:icon="@drawable/ic_bottom_hardware"/>
    </group>
</menu>