<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_launcher_shortcut_search"
        android:shortcutDisabledMessage="@string/search_disabled_message"
        android:shortcutId="search"
        android:shortcutLongLabel="@string/search_shortcut_long_label"
        android:shortcutShortLabel="@string/search_shortcut_short_label"
        tools:targetApi="n_mr1">
        <intent
            android:action="android.intent.action.SEARCH"
            android:targetClass="com.cwlarson.deviceid.MainActivity"
            android:targetPackage="com.cwlarson.deviceid" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <categories android:name="android.shortcut.search" />
    </shortcut>
</shortcuts>